# rinha-be-2024-q1

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml
haproxy/: haproxy.cfg
src/: config.rs  db.rs  errors.rs  main.rs  models.rs  requests.rs  responses.rs  serializers.rs
src/config/: env.rs
src/db/: database.rs
src/errors/: errors.rs
src/models/: transaction.rs
src/requests/: transaction.rs
src/responses/: transaction.rs
src/serializers/: rinha_date_format.rs
