[package]
name = "nilapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
json = "0.12.4"
serde = { version = "1.0.197", features = ["derive"] }
validator = {version = "0.17.0", features = ["derive"] }
async-trait = "0.1.77"
derive_more = "0.99.17"
surrealdb = "1.2.0"
envy = "0.4.2"
env_logger = "0.11.2"
chrono = "0.4.34"