[package]
name = "nilapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
json = "0.12.4"
serde = { version = "1.0.197", features = ["derive"] }
validator = {version = "0.17.0", features = ["derive"] }
async-trait = "0.1.77"
derive_more = "0.99.17"
envy = "0.4.2"
chrono = "0.4.34"
tokio = "1.36.0"
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4", "with-serde_json-1", "with-uuid-1"]}
deadpool-postgres = "0.12.1"
serde_json = "1.0.114"
uuid = { version = "1.7.0", features = ["v4"] }
log = "0.4.20"
env_logger = "0.11.3"